--- a/manifests/cluster.yaml
+++ b/manifests/cluster.yaml
@@ -12,8 +12,8 @@ spec:
   #
   #   (2) The container image must have the barman-cli-cloud bundled.
   #       So, when building your custom Postgres container image, you can use
-  #       image ghcr.io/cloudnative-pg/postgresql as the base container imagee, as it is composed
-  #       of a community PostgreSQL image and the latest barman-cli-cloud package.
+  #       ghcr.io/cloudnative-pg/postgresql as the base container imagee, as it is composed of a
+  #       community PostgreSQL image and the latest barman-cli-cloud package.
   imageName: docker.io/archismanmridha/custom-postgres:17.0
 
   instances: 1
